--- a/src/app/header/cart/cart.component.html
+++ b/src/app/header/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="cart-list">
-        <app-cart-product class="product-widget" [Quantity]="CartProduct.Quantity" [productId]="CartProduct.ProductId" *ngFor="let CartProduct of cartContent"></app-cart-product>
+        <app-cart-product class="product-widget" [Quantity]="CartProduct.Quantity" [Product_Id]="CartProduct.Product_Id" *ngFor="let CartProduct of cartContent"></app-cart-product>
     </div>
     <div class="cart-summary">
         <small>{{cartCount}} Item(s) selected</small>
