by last modified

--- a/src/app/Admin/subcategory/add-subcategory/add-subcategory.component.html
+++ b/src/app/Admin/subcategory/add-subcategory/add-subcategory.component.html
@@ -1,37 +1,49 @@
 
   <h2>Add New Subcategory</h2>
   <div class="container">
-      <form #userPost="ngForm" novalidate (ngSubmit)="onSubmit(userPost.value)" >
+      <form #userPost="ngForm" novalidate (ngSubmit)="onSubmit(userPost.value)" enctype='multipart/form-data' >
      
   
           <div class="form-group">
-              <label>Subcategory Name :</label>
-              <input name="Name" required width="50%" type="text" [(ngModel)]="subcategory.Name"  class="form-control" />
-  
+              <label for="Name">Subcategory Name :</label>
+              <input name="Namee" id="Name" required width="50%" type="text" #Name="ngModel" [class.is-invalid]="Name.invalid && Name.touched" [(ngModel)]="subcategory.Name"  class="form-control" />
+              <div *ngIf="Name.touched && Name.invalid">
+                <small class="text-danger" *ngIf="Name.errors?.required">Name is required</small>
+             </div>
           </div>
     
           <div class="form-group">
-            <label>Main Subcategory Name :</label><br>
-            <select [(ngModel)]="subcategory.Cat_Id" width="50%" required>
+            <label for="Cat_Id">Main Subcategory Name :</label><br>
+            <select name="Cat_Id" [(ngModel)]="subcategory.Cat_Id" id="Cat_Id" #Cat_Id="ngModel" [class.is-invalid]="Cat_Id.invalid && Cat_Id.touched" width="50%" required>
                     <option *ngFor="let main of maincategories" value="{{main.Id}}">{{main.Name}}</option>
             </select>
+            <div *ngIf="Cat_Id.touched && Cat_Id.invalid">
+                <small class="text-danger" *ngIf="Cat_Id.errors?.required">the Main Category for this Subcategory is required</small>
+             </div>
 
         </div>
      
         <div class="form-group">
-            <label>Parent Subcategory Name :</label><br>
-            <select [(ngModel)]="subcategory.Parent_Id" width="50%" required>
+            <label for="Parent_Id">Parent Subcategory Name :</label><br>
+            <select name="Parent_Id" [(ngModel)]="subcategory.Parent_Id" Id="Parent_Id" #Parent_Id="ngModel" [class.is-invalid]="Parent_Id.invalid && Parent_Id.touched" width="50%" required>
                 <option value="0">Basic Sub Category</option>
                 <option *ngFor="let sub of subcategories" value="{{sub.Id}}">{{sub.Name}}</option>
             </select>
+            <div *ngIf="Parent_Id.touched && Parent_Id.invalid">
+                <small class="text-danger" *ngIf="Parent_Id.errors?.required">please select Subcategory of this Subcategory or make it Subcategory Base </small>
+             </div>
 
         </div>
-          <div id="imageContainer" class="rounded-circle">
-              <input type="text" name="Photo" id="Photo" width="50%" [(ngModel)]="subcategory.Photo" accept="image/png, image/jpeg, image/jpg" class="form-control"  />
-          </div>
+        <div>
+            <img [src]="imageUrl" width="120px" height="120px">
+        </div>
+       <div class="form-group">
+         <label for="Photo">Your Image</label>
+         <input type="file" id="Photo" name="Photo"  (change)="fileHandle($event.target)" accept="image/png, image/jpeg" >
+       </div>
           <br>
-          <input type="submit"class="btn btn-primary" value="Add Subcategory">
-          <button class="btn btn-danger" style="margin-left: 2rem;" routerLink="/admin/subcategory">Back</button>
+       <input type="submit"class="btn btn-primary" value="Add Subcategory">
+       <button class="btn btn-danger" style="margin-left: 2rem;" routerLink="/admin/subcategory">Back</button>
   
         
       </form>
