--- a/src/app/Admin/subcategory/index/subcategory.component.html
+++ b/src/app/Admin/subcategory/index/subcategory.component.html
@@ -2,7 +2,7 @@
 
 <div class="container" [hidden]="Outlet.isActivated">
   <br>  <div>
-    <a class="btn btn-success" routerLink="/admin/subcategory/Add">Add New Subcategory</a>
+    <a class="btn btn-success" routerLink="/admin/subAdd">Add New Subcategory</a>
   </div><br>
   <div class="card">
     
@@ -42,7 +42,7 @@
                     <td>{{subcat.ParentSubCategoryName}}</td>
                     <td><img src="http://localhost:9602/Content/Imgs/Sub_Categories/{{subcat.Photo}}" width="100px" height="100px"></td>
                     <td>
-                      <a class="btn btn-primary" routerLink="/admin/subcategory/Edit/{{subcat.Id}}" >Edit Subcategory</a>
+                      <a class="btn btn-primary" routerLink="/admin/subEdit/{{subcat.Id}}" >Edit Subcategory</a>
                     </td>
                     <td>
                       <a class="btn btn-danger" (click)="deleteSubcategory(subcat.Id)" routerLink="/admin/subcategory">Delete Subcategory</a>
