--- a/src/app/Admin/brand/Index/brand.component.html
+++ b/src/app/Admin/brand/Index/brand.component.html
@@ -2,7 +2,7 @@
 
 <div class="container" [hidden]="Outlet.isActivated">
   <br>  <div>
-    <a class="btn btn-success" routerLink="/admin/brand/Add">Add New Brand</a>
+    <a class="btn btn-success" routerLink="/admin/AddBrand">Add New Brand</a>
   </div><br>
   <div class="card">
     
@@ -34,13 +34,12 @@
                     <td>{{brand.Name}}</td>
                     <td><img src="http://localhost:9602/Content/Imgs/Brands/{{brand.Photo}}" width="100px" height="100px"></td>
                     <td>
-                      <a class="btn btn-primary" routerLink="/admin/brand/Edit/{{brand.Id}}" >Edit Brand</a>
+                      <a class="btn btn-primary" routerLink="/admin/EditBrand/{{brand.Id}}" >Edit Brand</a>
                     </td>
                     <td>
                       <a class="btn btn-danger" (click)="deletebrand(brand.Id)" routerLink="/admin/brand">Delete Brand</a>
                     </td>
                 </tr>
-              
             </tbody>
           </table>
         </div>
