--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -11,7 +11,7 @@
         <div class="form-group">
             <div class="payment-method">
                 <div class="input-radio">
-                    <input type="radio" name="payment" id="payment-1" ngModel value="1" checked>
+                    <input type="radio" name="Payment_Id" id="payment-1" ngModel value="1" checked>
                     <label for="payment-1">
                         <span></span>
                         Cash
@@ -19,7 +19,7 @@
         
                 </div>
                 <div class="input-radio">
-                    <input type="radio" name="payment" id="payment-2" ngModel value="0">
+                    <input type="radio" name="Payment_Id" id="payment-2" ngModel value="0">
                     <label for="payment-2">
                         <span></span>
                         Visa
@@ -27,7 +27,7 @@
         
                 </div>
                 <div class="input-radio">
-                    <input type="radio" name="payment" id="payment-3" ngModel value="2">
+                    <input type="radio" name="Payment_Id" id="payment-3" ngModel value="2">
                     <label for="payment-3">
                         <span></span>
                         PayPal
