--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <p>checkout Data</p>
 <div class="container">
     <form #CheckOutForm="ngForm" novalidate (ngSubmit)="onSubmit(CheckOutForm.value)" >
