--- a/src/app/Admin/admin/admin.component.html
+++ b/src/app/Admin/admin/admin.component.html
@@ -14,7 +14,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a routerLink="/admin/brand">Brand <span class="sr-only">(current)</span></a></li>
+          <li><a routerLink="/admin/brand">Brand <span class="sr-only">(current)</span></a></li>
           <li><a routerLink="/admin/MainCategory">Main Category</a></li>
           <li><a routerLink="/admin/subcategory">Sub Category</a></li>
           <li><a routerLink="/admin/product">Products</a></li>
@@ -29,19 +29,6 @@
               <li><a href="#">Separated link</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
             </ul>
           </li>
         </ul>
