--- a/src/app/Admin/product/index-product/index-product.component.html
+++ b/src/app/Admin/product/index-product/index-product.component.html
@@ -1,74 +1,72 @@
-
-<br>  <div>
+<div class="container">
+  <br>
+  <div>
     <a class="btn btn-success" routerLink="/admin/product/add">Add New Subcategory</a>
   </div><br>
   <div class="card">
-    
-      <div class="card-body">
-      
-        <div class="table-responsive">
-          <table class="table ">
-            <thead class=" text-primary">
-              <th>
-                ID
-              </th>
-              <th>
-                Name
-              </th>
-              <th>
-                Price
-              </th>
-              <th>
-                Offer_Price
-              </th>
-              <th>
-                Quantity
-              </th>
-              <th>
-                Sell_Count
-              </th>
-              <th>
-                Brand_Name
-              </th>
-              <th>
-                Sub_Category
-             </th>
-              <th>
-                Edit
-              </th>
-              <th>
-                Delete
-              </th>
-           
-            </thead>
-            <tbody>
-          
-                <tr *ngFor="let product of products">
-                    <td>{{product.Id}}</td>
-                    <td>{{product.Name}}</td>
-                    <td>{{product.Price}}</td>
-                    <td>{{product.Offer_Price}}</td>
+
+    <div class="card-body">
+
+      <div class="table-responsive">
+        <table class="table ">
+          <thead class=" text-primary">
+            <th>
+              ID
+            </th>
+            <th>
+              Name
+            </th>
+            <th>
+              Price
+            </th>
+            <th>
+              Offer_Price
+            </th>
+            <th>
+              Quantity
+            </th>
+            <th>
+              Sell_Count
+            </th>
+            <th>
+              Brand_Name
+            </th>
+            <th>
+              Sub_Category
+            </th>
+            <th>
+              Edit
+            </th>
+            <th>
+              Delete
+            </th>
+
+          </thead>
+          <tbody>
+
+            <tr *ngFor="let product of products">
+              <td>{{product.Id}}</td>
+              <td>{{product.Name}}</td>
+              <td>{{product.Price}}</td>
+              <td>{{product.Offer_Price}}</td>
 
 
-                    <td>{{product.Quantity}}</td>
-                    <td>{{product.Sell_Count}}</td>
-                    <td>{{product.Brand.Name}}</td>
-                    <td>{{product.Sub_Category.Name}}</td>
-              
-                    <!-- <td><img src="http://localhost:9602/Content/Imgs/Sub_Categories/{{subcat.Photo}}" width="100px" height="100px"></td> -->
-                    <td>
-                      <a class="btn btn-primary" routerLink="/admin/product/edit/{{product.Id}}" >Edit Product</a>
-                    </td>
-                    <td>
-                      <a class="btn btn-danger" (click)="deleteProduct(product.Id)" >Delete Product</a>
-                    </td>
-                </tr>
-              
-            </tbody>
-          </table>
-        </div>
+              <td>{{product.Quantity}}</td>
+              <td>{{product.Sell_Count}}</td>
+              <td>{{product.Brand.Name}}</td>
+              <td>{{product.Sub_Category.Name}}</td>
+
+              <!-- <td><img src="http://localhost:9602/Content/Imgs/Sub_Categories/{{subcat.Photo}}" width="100px" height="100px"></td> -->
+              <td>
+                <a class="btn btn-primary" routerLink="/admin/product/edit/{{product.Id}}">Edit Product</a>
+              </td>
+              <td>
+                <a class="btn btn-danger" (click)="deleteProduct(product.Id)">Delete Product</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
-
-
-
+  </div>
+</div>
