--- a/src/app/Store/product/product.component.html
+++ b/src/app/Store/product/product.component.html
@@ -1,5 +1,5 @@
 <!-- product -->
-<div class="col-md-3 col-xs-6">
+<div class="col-md-3 col-xs-6" *ngIf="hidden">
     <div class="product">
         <div class="product-img">
             <img src="http://localhost:9602/Content/Imgs/Products/{{product.Photo}}" alt="">
