--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -1,5 +1,5 @@
-<app-nav-bar></app-nav-bar>
-<p>checkout Data</p>
+
+
 <div class="container">
     <form #CheckOutForm="ngForm" novalidate (ngSubmit)="onSubmit(CheckOutForm.value)" >
    
@@ -12,7 +12,7 @@
         <div class="form-group">
             <div class="payment-method">
                 <div class="input-radio">
-                    <input type="radio" name="Payment_Id" id="payment-1" ngModel value="1" checked>
+                    <input type="radio" name="Payment_Id" id="payment-1" ngModel value="1" required >
                     <label for="payment-1">
                         <span></span>
                         Cash
@@ -20,7 +20,7 @@
         
                 </div>
                 <div class="input-radio">
-                    <input type="radio" name="Payment_Id" id="payment-2" ngModel value="0">
+                    <input type="radio" name="Payment_Id" id="payment-2" ngModel value="0" required>
                     <label for="payment-2">
                         <span></span>
                         Visa
@@ -28,7 +28,7 @@
         
                 </div>
                 <div class="input-radio">
-                    <input type="radio" name="Payment_Id" id="payment-3" ngModel value="2">
+                    <input type="radio" name="Payment_Id" id="payment-3" ngModel value="2" required>
                     <label for="payment-3">
                         <span></span>
                         PayPal
