--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -69,7 +69,7 @@
                                 <span class="qty-down">-</span>-->
                             <!--</div> click="addToCart({{productdetails.Id}})
                         </div>-->
-                        <button class="add-to-cart-btn" ><i class="fa fa-shopping-cart"></i> add to cart</button>
+                        <button class="add-to-cart-btn" (click)="AddToCart()"><i class="fa fa-shopping-cart"></i> add to cart</button>
                     </div>
 
                     <!--<ul class="product-btns">
