--- a/src/app/user-header/user-header.component.html
+++ b/src/app/user-header/user-header.component.html
@@ -2,16 +2,14 @@
 <div id="top-header">
     <div class="container">
         <ul class="header-links pull-left">
-            <li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-            <li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-            <li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+            <li><a href="#" *ngIf="userRgisterd"><i class="fa fa-envelope-o"></i> {{userName}}</a></li>
             <li *ngIf="!userRgisterd"><a routerLink="/login"><i class="fa fa-map-marker"></i>Login</a></li>
             <li *ngIf="!userRgisterd"><a routerLink="/register"><i class="fa fa-map-marker"></i>Register</a></li>
             <li *ngIf="userRgisterd"><a (click)="Logout()"><i class="fa fa-map-marker"></i>Logout</a></li>
         </ul>
         <ul class="header-links pull-right">
-            <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-            <li><a routerLink="/homePage/profile"><i class="fa fa-user-o"></i> My Account</a></li>
+            <li><a ><i class="fa fa-dollar"></i> USD</a></li>
+            <li *ngIf="userRgisterd"><a routerLink="/homePage/profile" ><i class="fa fa-user-o"></i> My Account</a></li>
         </ul>
     </div>
 </div>
