--- a/src/app/heigh-saled-product-list/heigh-saled-product-list.component.html
+++ b/src/app/heigh-saled-product-list/heigh-saled-product-list.component.html
@@ -25,7 +25,7 @@
                         <div id="tab1" class="tab-pane active">
                             <div class="products-slick" data-nav="#slick-nav-1">
 
-                                    <app-product [product]="product" *ngFor="let product of heighSaleProduct" ></app-product>
+                                    <app-product [product]="product" [hidden]="true" *ngFor="let product of heighSaleProduct" ></app-product>
 
                             </div>
                             <div id="slick-nav-1" class="products-slick-nav"></div>
