tables style fix

--- a/src/app/Admin/MainCategory/edit-main-category/edit-main-category.component.html
+++ b/src/app/Admin/MainCategory/edit-main-category/edit-main-category.component.html
@@ -19,6 +19,6 @@
         
         <br>
         <input type="submit" class="btn btn-primary" value="Edit mainCategory">
-        <button class="btn btn-danger" style="margin-left: 2rem;" routerLink="/admin/mainCategory">Back</button>
+        <button class="btn btn-danger" style="margin-left: 2rem;" routerLink="/admin/MainCategory">Back</button>
     </form>
 </div>
