--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -309,7 +309,7 @@
 
             <!-- product -->
 
-                <app-product [product]="product" *ngFor="let product of productdetails.RelatedProducts" ></app-product>
+                <app-product [product]="product" [hidden]="true" *ngFor="let product of productdetails.RelatedProducts" ></app-product>
     
         </div>
     </div>
