--- a/src/app/Admin/MainCategory/index/index.component.html
+++ b/src/app/Admin/MainCategory/index/index.component.html
@@ -8,9 +8,10 @@
     
       <div class="card-body">
       
-        <div class="table-responsive">
-          <table class="table ">
-            <thead class=" text-primary">
+        
+        <table class="styled-table">
+          <thead>
+            <tr>
               <th>
                 ID
               </th>
@@ -26,7 +27,7 @@
               <th>
                 Delete
               </th>
-           
+            </tr>
             </thead>
             <tbody>
               <tr *ngFor="let cat of main_Cat">
@@ -44,7 +45,6 @@
               
             </tbody>
           </table>
-        </div>
       </div>
     </div>
 </div>
