--- a/src/app/header/cart/cart-product/cart-product.component.html
+++ b/src/app/header/cart/cart-product/cart-product.component.html
@@ -2,7 +2,7 @@
     <img src="http://localhost:9602/Content/Imgs/Products/{{product?.Photo}}" alt="">
 </div>
 <div class="product-body">
-    <h3 class="product-name"><a href="#">{{product?.Name}}</a></h3>
+    <h3 class="product-name"><a routerLink="/homePage/details/{{product?.Id}}">{{product?.Name}}</a></h3>
     <h4 class="product-price"><span class="qty">{{Quantity}}x</span>${{product?.Offer_Price}}</h4>
 </div>
 <button class="delete" (click)="DeleteFromCart()"><i class="fa fa-close"></i></button>
