--- a/src/app/Admin/admin/admin.component.html
+++ b/src/app/Admin/admin/admin.component.html
@@ -19,6 +19,7 @@
           <li><a routerLink="/admin/subcategory">Sub Category</a></li>
           <li><a routerLink="/admin/product">Products</a></li>
           <li><a routerLink="/admin/users">Users</a></li>
+          <li><a routerLink="/admin/orders">Orders</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
