Add modal To All Components

--- a/src/app/Admin/MainCategory/index/index.component.html
+++ b/src/app/Admin/MainCategory/index/index.component.html
@@ -38,7 +38,7 @@
                   <a class="btn btn-primary" routerLink="/admin/MainCategory/Edit/{{cat.Id}}" >Edit MainCategory</a>
                 </td>
                 <td>
-                  <a class="btn btn-danger" (click)="deleteMain_category(cat.Id)" routerLink="/admin/MainCategory">Delete mainCategory</a>
+                  <a class="btn btn-danger" (click)="ConfirmDelete(cat.Id)" routerLink="/admin/MainCategory">Delete mainCategory</a>
                 </td>
             </tr>
                 
