--- a/src/app/Admin/brand/Index/brand.component.html
+++ b/src/app/Admin/brand/Index/brand.component.html
@@ -40,7 +40,7 @@
               <a class="btn btn-primary" routerLink="/admin/brand/Edit/{{brand.Id}}">Edit Brand</a>
             </td>
             <td>
-              <a class="btn btn-danger" (click)="deletebrand(brand.Id)" routerLink="/admin/brand">Delete Brand</a>
+              <a class="btn btn-danger" (click)="ConfirmDelete(brand.Id)" routerLink="/admin/brand">Delete Brand</a>
             </td>
           </tr>
         </tbody>
