--- a/src/app/Admin/subcategory/index/subcategory.component.html
+++ b/src/app/Admin/subcategory/index/subcategory.component.html
@@ -47,7 +47,7 @@
               <a class="btn btn-primary" routerLink="/admin/subEdit/{{subcat.Id}}">Edit Subcategory</a>
             </td>
             <td>
-              <a class="btn btn-danger" (click)="deleteSubcategory(subcat.Id)" routerLink="/admin/subcategory">Delete
+              <a class="btn btn-danger" (click)="ConfirmDelete(subcat.Id)" routerLink="/admin/subcategory">Delete
                 Subcategory</a>
             </td>
           </tr>
