--- a/src/app/Admin/product/add-product/add-product.component.html
+++ b/src/app/Admin/product/add-product/add-product.component.html
@@ -19,7 +19,7 @@
         <div class="form-group">
           <label for="Name"> Name:</label>
           <input type="text" class="form-control" id="Name" name="Name"
-            [class.is-invalid]="Name.invalid && Name.touched" [(ngModel)]="productData.Name" #Name="ngModel" required>
+            [class.invalid]="Name.invalid && Name.touched" [(ngModel)]="productData.Name" #Name="ngModel" required>
 
           <div *ngIf="Name.touched && Name.invalid">
             <small class="text-danger" *ngIf="Name.errors?.required">Name is
@@ -31,7 +31,7 @@
         <div class="form-group">
           <label for="Price">Price :</label>
           <input type="number" class="form-control" id="Price" name="Price"
-            [class.is-invalid]="Price.invalid &&Price.touched" [(ngModel)]="productData.Price" #Price="ngModel"
+            [class.invalid]="Price.invalid &&Price.touched" [(ngModel)]="productData.Price" #Price="ngModel"
             required>
 
           <div *ngIf="Price.touched && Price.invalid">
@@ -43,7 +43,7 @@
         <div class="form-group">
           <label for="Offer_Price">offer_price:</label>
           <input type="text" class="form-control" id="Offer_Price" name="Offer_Price"
-            [class.is-invalid]="Offer_Price.invalid &&Offer_Price.touched" [(ngModel)]="productData.Offer_Price"
+            [class.invalid]="Offer_Price.invalid &&Offer_Price.touched" [(ngModel)]="productData.Offer_Price"
             #Offer_Price="ngModel">
 
 
@@ -52,7 +52,7 @@
         <div class="form-group">
           <label for="Quantity">Quantity :</label>
           <input type="number" class="form-control" id="Quantity" name="Quantity"
-            [class.is-invalid]="Quantity.invalid &&Quantity.touched" [(ngModel)]="productData.Quantity"
+            [class.invalid]="Quantity.invalid &&Quantity.touched" [(ngModel)]="productData.Quantity"
             #Quantity="ngModel" required>
 
           <div *ngIf="Quantity.touched && Quantity.invalid">
@@ -64,7 +64,7 @@
         <div class="form-group" hidden>
           <label for="Vendor_User_id">Vendor ID :</label>
           <input type="text" class="form-control" id="Vendor_User_id" name="Vendor_User_id"
-            [class.is-invalid]="Vendor_User_id.invalid &&Vendor_User_id.touched"
+            [class.invalid]="Vendor_User_id.invalid &&Vendor_User_id.touched"
             [(ngModel)]="productData.Vendor_User_id" #Vendor_User_id="ngModel" required>
 
           <div *ngIf="Vendor_User_id.touched && Vendor_User_id.invalid">
@@ -76,7 +76,7 @@
 
         <div class="form-group">
           <label for="Desc">Desccription:</label>
-          <input type="text" class="form-control" id="Desc" name="Desc" [class.is-invalid]="Desc.invalid &&Desc.touched"
+          <input type="text" class="form-control" id="Desc" name="Desc" [class.invalid]="Desc.invalid &&Desc.touched"
             [(ngModel)]="productData.Desc" #Desc="ngModel" required>
 
           <div *ngIf="Desc.touched && Desc.invalid">
