--- a/src/app/user-header/user-header.component.html
+++ b/src/app/user-header/user-header.component.html
@@ -2,10 +2,10 @@
 <div id="top-header">
     <div class="container">
         <ul class="header-links pull-left">
-            <li><a href="#" *ngIf="userRgisterd"><i class="fa fa-envelope-o"></i> {{userName}}</a></li>
+            <li><a *ngIf="userRgisterd" routerLink="/homePage/profile"><i class="fa fa-envelope-o"></i> {{userName}}</a></li>
             <li *ngIf="!userRgisterd"><a routerLink="/login"><i class="fa fa-map-marker"></i>Login</a></li>
             <li *ngIf="!userRgisterd"><a routerLink="/register"><i class="fa fa-map-marker"></i>Register</a></li>
-            <li *ngIf="userRgisterd"><a (click)="Logout()"><i class="fa fa-map-marker"></i>Logout</a></li>
+            <li *ngIf="userRgisterd"><a routerLink="/homePage" (click)="Logout()"><i class="fa fa-map-marker"></i>Logout</a></li>
         </ul>
         <ul class="header-links pull-right">
             <li><a ><i class="fa fa-dollar"></i> USD</a></li>
