--- a/src/app/Store/product-list/product-list.component.html
+++ b/src/app/Store/product-list/product-list.component.html
@@ -12,7 +12,7 @@
             <!-- section title -->
             <div class="col-md-12" *ngIf="products.length != 0">
                 <div class="section-title">
-                    <h3 class="title">New Products</h3>
+                    <h3 class="title">{{title}}</h3>
                     <div class="section-nav">
                         <ul class="section-tab-nav tab-nav">
                             <li [class.active]="i==0" *ngFor="let brand of brands; let i=index" ><a data-toggle="tab" href="#tab1">{{brand.Name}}</a></li>
@@ -47,7 +47,7 @@
 <br>
 <br>
 <br>
-<div class="container" (click)="SeeMore()"> <button class="btn btn-primary w-100" >See More</button></div>
+<div class="container" (click)="SeeMore()" *ngIf="this.products.length - (4*this.pageNumber) > 0"> <button class="btn btn-primary w-100" >See More</button></div>
 
 
 
