--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -12,7 +12,7 @@
                 <p id="modalBody">body</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" (click)="Dismiss()">Close</button>
                 <button type="button" class="btn btn-danger" (click)="Confirmed()"
                     data-dismiss="modal" id="modalButton">Delete</button>
             </div>
