--- a/src/app/Auth/register/register.component.html
+++ b/src/app/Auth/register/register.component.html
@@ -1,4 +1,4 @@
-<app-nav-bar></app-nav-bar>
+<app-nav-bar *ngIf="register"></app-nav-bar>
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
