--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -48,7 +48,7 @@
 
                         <!-- Cart -->
                         <div class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                            <a class="dropdown-toggle" routerLink="/homePage/CheckOut" data-toggle="dropdown" aria-expanded="true">
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>Your Cart</span>
                                 <div class="qty" *ngIf="cartCount > 0">{{cartCount}}</div>
